# life

./: Cargo.toml  LICENSE  README.md
src/: life.rs  main.rs  neighborhood.rs
