[package]
name = "life"
version = "0.1.1"
authors = ["CS 410/510 Rust Summer 2019 <bart@cs.pdx.edu>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/pdx-cs-rust/life"

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"

[dependencies.ggez]
version = "0.9.3"
default-features = false
